Windows: Mark native-message handling as 'toplevel' tasks.

'toplevel' is the category telemetry tests look at when it tries to
compute cpu-usage for a particular thread. Mark the native-message
handling as 'toplevel' tasks, so that input event dispatch shows up
as a top-level entry in traces, and it is included when measuring the
cpu usage of the UI thread.

BUG=858944

Change-Id: I431e0b97df095b56b9da53ac7265cb9238127f16
Reviewed-on: https://chromium-review.googlesource.com/1124705
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572646}
Former-commit-id: 00963a488aabf5c4187376fc0274206b617f93c4